<resources>
    <string name="app_name">Museum</string>
    <string name="user_preferences_file_key">user_preferences</string>
    <string name="username_key">username_key</string>
    <string name="profile_pic_id_key">profile_pic_id_key</string>

    <string name="hermitage_description">
        Музей, основанный Екатериной Великой, с богатой коллекцией произведений искусства и древностей.
    </string>

    <string name="rus_museum_description">
        Музей изобразительных искусств, открытый в 1898 году, с богатой коллекцией русских картин, скульптур и икон.
    </string>

    <string name="etnographic_museum_description">
        Российский этнографический музей с более чем 500 000 экспонатов, расположенный в неоклассическом здании 1913 г.
    </string>

    <string name="faberge_museum_description">
        В музее собраны изделия, созданные фирмой Карла Фаберже, в том числе пасхальные яйца для императорской семьи.
    </string>

    <string name="peters_aquatoria_description">
        Музей – макет Петербурга XVIII века, где есть бинокли и аудиогиды.
    </string>

    <string name="kunstcamera_description">
        Музей антропологии и этнографии с археологическими находками из России и других стран мира.
    </string>

    <string name="leningrad_defence_museum_description">
        Музей с коллекцией униформ, артиллерии и произведений искусства, посвященный истории блокады Ленинграда.
    </string>

    <string name="user_location_not_found">
        Sorry, the app was unable to obtain your location
    </string>

    <string name="location_permission_denied">
        Permission to access device location is denied
    </string>

    <string name="review_already_present">
        You have already left a review for this museum
    </string>

    <string name="login_button">login-button</string>
    <string name="skip_login_button">skip-login-button</string>
    <string name="add_review_button">add-review-button</string>
    <string name="post_review_button">post-review-button</string>
    <string name="mark_as_visited_button">mark-as-visited-button</string>
    <string name="rating_bar_review">rating-bar-review</string>
    <string name="review_text_input">review-text-input</string>
    <string name="review_card">review-card</string>
    <string name="museum_list">museum-list</string>
    <string name="about_page_info">about-page-info</string>
    <string name="museum_search_input">museum-search-input</string>
    <string name="clear_input_button">clear-input-button</string>
    <string name="bottom_bar_item">bottom-bar-item</string>
    <string name="username_input">username-input</string>

    <string name="about_page_content">
        This app allows a user to search through the many museums of Saint Petersburg.
        Each museum has its own profile where one can find some useful info about a museum
        along with reviews from other users.\n\n

        If you find a certain museum interesting, you can request a route to it on the map
        so that you can visit it yourself.\n\n

        A user can also mark the museums they have already visited. Such museums can be found
        on the \'Visited\' page of the app.\n\n

        Authors: Arsen Nagdalian and Anton Sudov
    </string>

    <string name="author_1">Arsen Nagdalian</string>
    <string name="author_2">Anton Sudov</string>
</resources>