...
                }
            }

            Spacer(modifier = Modifier.height(20.dp))
            ClickableText(
                modifier = Modifier.testTag(stringResource(id = R.string.skip_login_button)),
                text = AnnotatedString("Skip login"),
                onClick = onSkipLoginClick,
                style = TextStyle(
                    fontSize = 14.sp,
                    fontFamily = FontFamily.Default
                )
            )
...
